objects/LiveChatTranscriptEvent__c.object
<CustomObject>
    <description>Used by Service Analytics v6+ Analytics App install. Do not remove.</description>
    <fields>
        <fullName>AgentId__c</fullName>
        <label>Agent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveChatTranscriptId__c</fullName>
        <label>LiveChatTranscript ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>LiveChatTranscriptEvent__c</label>
    <nameField>
        <displayFormat>LCT-{000000}</displayFormat>
        <label>LiveChatTranscriptEvent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LiveChatTranscriptEvent__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>